build executable when kernels are modified; remove the display of irrelevant output after build is complete

--- a/sycl/myocyte/Makefile
+++ b/sycl/myocyte/Makefile
@@ -13,30 +13,30 @@ LDFLAGS = -lm
 
 # Codeplay Compiler
 ifneq (,$(findstring codeplay,$(VENDOR)))
-  CC = compute++
-  CFLAGS += -no-serial-memop -sycl -sycl-driver
-  LDFLAGS += -lComputeCpp
+	CC = compute++
+	CFLAGS += -no-serial-memop -sycl -sycl-driver
+	LDFLAGS += -lComputeCpp
 endif
 
 # Intel DPC++ Compiler
 ifneq (,$(findstring intel,$(VENDOR)))
-  CC = dpcpp
-  CFLAGS += 
-  LDFLAGS += 
+	CC = dpcpp
+	CFLAGS += 
+	LDFLAGS += 
 endif
 
 # Debug Flags
 ifeq ($(DEBUG),yes)
-  CFLAGS += -g  
+	CFLAGS += -g  
 endif
 
 # Optimization Flags
 ifeq ($(OPTIMIZE),yes)
-  CFLAGS += -O3
+	CFLAGS += -O3
 endif
 
 ifeq ($(DEVICE),gpu)
-  CFLAGS +=-DUSE_GPU
+	CFLAGS +=-DUSE_GPU
 endif
 
 # ========================================================================================================================================================================================================200
@@ -44,73 +44,72 @@ endif
 # ========================================================================================================================================================================================================200
 
 ./myocyte.out:	./main.o \
-			./kernel/kernel_gpu_opencl_wrapper.o \
-			./util/file/file.o \
-			./util/num/num.o \
-			./util/timer/timer.o 
+	./kernel/kernel_gpu_opencl_wrapper.o \
+	./util/file/file.o \
+	./util/num/num.o \
+	./util/timer/timer.o 
 	$(CC)	./main.o \
-			./kernel/kernel_gpu_opencl_wrapper.o \
-			./util/file/file.o \
-			./util/num/num.o \
-			./util/timer/timer.o \
-			$(LDFLAGS) \
-                        -o myocyte.out
-# ========================================================================================================================================================================================================200
-#	OBJECTS (COMPILE SOURCE FILES INTO OBJECTS)
-# ========================================================================================================================================================================================================200
+		./kernel/kernel_gpu_opencl_wrapper.o \
+		./util/file/file.o \
+		./util/num/num.o \
+		./util/timer/timer.o \
+		$(LDFLAGS) \
+		-o myocyte.out
 
 # ======================================================================================================================================================150
 #	MAIN FUNCTION
 # ======================================================================================================================================================150
 
 ./main.o:	./common.h \
-			./main.h \
-			./main.c
+	./main.h \
+	./main.c
 	$(CC) $(CFLAGS)	./main.c \
-			-c \
-			-o ./main.o 
+		-c \
+		-o ./main.o 
 
 # ======================================================================================================================================================150
 #	KERNELS
 # ======================================================================================================================================================150
 
 ./kernel/kernel_gpu_opencl_wrapper.o:	./common.h \
-										./kernel/kernel_gpu_opencl_wrapper.h \
-										./kernel/kernel_gpu_opencl_wrapper.c \
-										./kernel/solver.c \
-										./kernel/embedded_fehlberg_7_8.c \
-										./kernel/master.c 
+	./kernel/kernel_gpu_opencl_wrapper.h \
+	./kernel/kernel_gpu_opencl_wrapper.c \
+	./kernel/solver.c \
+	./kernel/embedded_fehlberg_7_8.c \
+	./kernel/master.c \
+	./kernel/kernel_cam.sycl \
+	./kernel/kernel_ecc.sycl
 	$(CC) $(CFLAGS)	./kernel/kernel_gpu_opencl_wrapper.c \
-			-c \
-			-o ./kernel/kernel_gpu_opencl_wrapper.o 
+		-c \
+		-o ./kernel/kernel_gpu_opencl_wrapper.o 
 
 # ======================================================================================================================================================150
 #	UTILITIES
 # ======================================================================================================================================================150
 
 ./util/file/file.o:	./common.h \
-					./util/file/file.h \
-					./util/file/file.c
+	./util/file/file.h \
+	./util/file/file.c
 	$(CC)	./util/file/file.c \
-			-c \
-			-o ./util/file/file.o \
-			-O3
+		-c \
+		-o ./util/file/file.o \
+		-O3
 
 ./util/num/num.o:	./common.h \
-					./util/num/num.h \
-					./util/num/num.c
+	./util/num/num.h \
+	./util/num/num.c
 	$(CC)	./util/num/num.c \
-			-c \
-			-o ./util/num/num.o \
-			-O3
+		-c \
+		-o ./util/num/num.o \
+		-O3
 
 ./util/timer/timer.o:	./common.h \
-						./util/timer/timer.h \
-						./util/timer/timer.c
+	./util/timer/timer.h \
+	./util/timer/timer.c
 	$(CC)	./util/timer/timer.c \
-			-c \
-			-o ./util/timer/timer.o \
-			-O3
+		-c \
+		-o ./util/timer/timer.o \
+		-O3
 
 
 run: myocyte.out
@@ -121,8 +120,5 @@ clean:
 		./kernel/*.o \
 		./util/file/*.o \
 		./util/timer/*.o \
-                ./util/num/*.o \
-                ./output.txt
-# ========================================================================================================================================================================================================200
-#	END
-# ========================================================================================================================================================================================================200
+		./util/num/*.o \
+		./output.txt
