Add build dependency

--- a/sycl/nn/Makefile
+++ b/sycl/nn/Makefile
@@ -44,7 +44,7 @@ SRC = nearestNeighbor.cpp utils.cpp
 
 EXE = nn
 
-$(EXE):
+$(EXE): $(SRC) kernel_nn.sycl
 	$(CC) $(CFLAGS) $(SRC) -o $(EXE) $(LDFLAGS)
 
 run: $(EXE)
